--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1874,6 +1874,11 @@ input:-ms-input-placeholder {
    styles
    ========================================================================== */
 /* Color variables */
+/*320px*/
+/*600px*/
+/*768px*/
+/*1024px*/
+/*1200px*/
 body {
   background: #fff;
   font-family: "ff-dagny-web-pro", sans-serif;
@@ -1914,29 +1919,87 @@ a:focus {
     max-width: 62.5rem;
     margin: 0 auto;
     position: relative; }
-    .header nav .logo {
+    .header nav .logo-mobile {
+      display: none; }
+    .header nav .logo-desktop {
       position: absolute;
       top: -8px;
-      left: 0; }
-    .header nav .navigation {
-      padding: 50px 0 0 270px; }
-      .header nav .navigation li {
+      left: 10px; }
+    .header nav .nav-desktop {
+      padding: 50px 0 0 260px; }
+      .header nav .nav-desktop li {
         float: left;
-        margin: 0 3em 0 0; }
-        .header nav .navigation li a {
+        margin: 0 .25em 0 0; }
+        .header nav .nav-desktop li a {
           font-family: "ff-dagny-web-pro", sans-serif;
           font-size: 16px;
           font-weight: bold;
           text-transform: uppercase;
           color: #4b4b4b;
-          text-decoration: none; }
+          text-decoration: none;
+          padding: .5em .5em;
+          border-radius: 5px; }
+        .header nav .nav-desktop li a:hover {
+          background-color: rgba(255, 255, 255, 0.4); }
+  @media screen and (max-width: 37.5em) {
+    .header {
+      height: 70px; }
+      .header nav .logo-desktop {
+        display: none; }
+      .header nav .logo-mobile {
+        display: block;
+        position: absolute;
+        top: -14px;
+        left: 10px; }
+      .header nav .nav-desktop {
+        display: none; }
+      .header .menu {
+        border: 3px solid #675d54;
+        margin: .5em;
+        width: 50px;
+        height: 42px;
+        display: block;
+        background-color: #998678;
+        position: absolute;
+        top: 10px;
+        right: 5px;
+        border-radius: 5px; }
+        .header .menu .bar {
+          width: 70%;
+          height: 4px;
+          background-color: #fff;
+          -moz-border-radius: 5px;
+          -webkit-border-radius: 5px;
+          border-radius: 5px;
+          margin: 0 auto; }
+        .header .menu .bar1 {
+          margin-top: 7px; }
+        .header .menu .bar2 {
+          margin-top: 5px; }
+        .header .menu .bar3 {
+          margin-top: 5px; }
+      .header .nav-collapse {
+        top: 70px;
+        z-index: 1; }
+        .header .nav-collapse ul {
+          margin: 0;
+          padding: 0;
+          width: 100%;
+          display: block;
+          list-style: none;
+          border-bottom: 1px solid #973d25;
+          background-color: #d3d3cb; }
+          .header .nav-collapse ul li {
+            padding: 1em;
+            border-top: 1px solid rgba(255, 255, 255, 0.5); }
+            .header .nav-collapse ul li a {
+              font-size: 16px; } }
 
 .container {
   padding: 30px 0 0 0; }
 
 .left-col {
-  height: 100%;
-  padding-left: 0; }
+  height: 100%; }
 
 .right-col {
   border-left: 1px solid #d3d3cb;
@@ -2042,7 +2105,8 @@ footer {
       margin: 0;
       padding: 10px 0 0 0; }
     footer .footer .navigation {
-      padding: 0; }
+      padding: 0;
+      background-color: #d3d3cb; }
       footer .footer .navigation li {
         padding: 30px 0 0 0; }
         footer .footer .navigation li a {
@@ -2050,3 +2114,6 @@ footer {
           text-transform: uppercase; }
         footer .footer .navigation li:first-child {
           padding: 0; }
+      @media screen and (max-width: 64em) {
+        footer .footer .navigation {
+          padding: 0 1em; } }
